--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,5 @@ authors = ["Max Lee <maxbmhlee@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+clap = {version = "~2.27.0", features = ["yaml"]}
+chrono = "0.4"
