--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,10 @@ edition = "2018"
 [dependencies]
 clap = {version = "~2.27.0", features = ["yaml"]}
 chrono = "0.4"
+csv = "1"
+serde = "1"
+serde_derive = "1"
+
+[dev-dependencies]
+assert_cmd = "0.11"
+assert_fs = "0.11"
