--- a/src/cli.yml
+++ b/src/cli.yml
@@ -5,47 +5,35 @@ settings:
   - ArgRequiredElseHelp
 
 args:
-  - FILENAME:
-      help: The path to the delimited file you want to create a pivot table from
-      required: true
-      index: 1
   - aggfunc:
       help: The function you use to run accross the pivot table.
       required: true
-      index: 2
+      index: 1
       possible_values:
         - count
-        - sum
-        - mean
-        - median
-        - min
-        - max
-        - stdev
+
+  - filename:
+      help: The path to the delimited file you want to create a pivot table from
+      required: true
+      index: 2
+
   - rows:
-      help: The name of the index to aggregate on.
+      help: The name of the index(es) to aggregate on. Currently must be 0-indexed integers
       long: rows
       short: r
       takes_value: true
       multiple: true
+      required: true
   - columns:
-      help: The name of the column(s) to aggregate on.
+      help: The name of the column(s) to aggregate on. Currently must be 0-indexed integers
       long: cols
       short: c
       takes_value: true
       multiple: true
-  - values:
-      help: The name of the field used to determine the value (e.g. id for most count operations)
-      long: vals
+      required: true
+  - value:
+      help: The name of the field used to determine the value (e.g. id for most count operations). Currently must be 0-indexed integers
+      long: val
       short: v
       takes_value: true
       required: true
-  - log:
-      help: Adds a record to a data diary, data-diary.txt by default. Accepts an optional filename to save to
-      long: log
-      short: l
-      takes_value: true
-      default_value: data-diary.txt
-  - no-run:
-      help: Prevents the query from running. Can only be used with `--log`
-      long: no-run
-      requires: log
