--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "csvpivot"
 version = "0.1.0"
 authors = ["Max Lee <maxbmhlee@gmail.com>"]
 edition = "2018"
+license = "MIT"
+homepage = "https://maxblee.github.io"
+documentation = "https://maxblee.github.io/csvpivot"
+
 
 [dependencies]
 clap = {version = "~2.27.0", features = ["yaml"]}
