--- a/src/cli.yml
+++ b/src/cli.yml
@@ -7,7 +7,10 @@ settings:
 
 args:
   - aggfunc:
-      help: The function you use to run accross the pivot table.
+      help: "The function you use to run across the pivot table.
+      \n- count counts individual records
+      \n- countunique counts the number of unique records in the values column
+      \n- sum sums the values. Only supports numbers (integers and decimals)\n"
       required: true
       index: 1
       possible_values:
