--- a/src/cli.yml
+++ b/src/cli.yml
@@ -16,6 +16,7 @@ args:
       possible_values:
         - count
         - countunique
+        - sum
 
   - filename:
       help: The path to the delimited file you want to create a pivot table from
