updated help text for final output

--- a/src/cli.yml
+++ b/src/cli.yml
@@ -8,12 +8,21 @@ settings:
 args:
   - aggfunc:
       help: "The function you use to run across the pivot table.
-      \n- `count` counts individual records
-      \n- `countunique` counts the number of unique records in the values column
-      \n- `mean` computes a mean across the matching records
-      \n- `mode` computes the mode, returning the record that appears first in the data in the case of a tie
-      \n- `stddev` computes the sample standard deviation, outputting an empty string if there are 0 or 1 matching records
-      \n- `sum` sums the values. Only supports numbers (integers and decimals)\n"
+      \nThe functions fit into three main categories: numeric, textual, and type independent.
+      \n- Numeric functions parse records as numbers, raising an error if it can't identify a number.
+      \n\t- `mean` computes a mean across the matching records
+      \n\t- `median` computes the median of the matching records
+      \n\t- `stddev` computes the sample standard deviation of the matching records
+      \n\t- `sum` sums the values
+      \n- Textual functions parse everything as text
+      \n\t-`count` counts all of the individual records; it operates independently from the values
+      \n\t-`countunique` counts all of the unique records.
+      \n\t-`mode` determines the mode (the most commonly appearing value), in insertion order in the case of a tie
+      \n- Type independent functions have a default parsing method that can be overridden with the `-i` or `-N` flags
+      \n\t-`max` computes the maximum value. Defaults to strings (mainly for YYYYMMDD HHMMSS date formats)
+      \n\t-`min` works identically to `max` but for computing the minimum value (or oldest date)
+      \n\t-`range` computes the difference between `min` and `max`. Only works for valid numeric and date formats.
+      \n"
       required: true
       index: 1
       possible_values:
@@ -49,3 +58,12 @@ args:
       short: v
       takes_value: true
       required: true
+  - numeric:
+      help: Parses the type independent functions as numbers
+      short: N
+  - infer:
+      help: Infers the type/date format of type independent functions
+      short: i
+  - empty:
+      help: Ignores empty/null values (e.g. "", NULL, NaN, etc.)
+      short: e
