should now be able to compute numeric min, max, range from CLI

--- a/src/cli.yml
+++ b/src/cli.yml
@@ -28,9 +28,12 @@ args:
       possible_values:
         - count
         - countunique
+        - max
         - mean
         - median
+        - min
         - mode
+        - range
         - stddev
         - sum
 
