--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ documentation = "https://maxblee.github.io/csvpivot"
 clap = {version = "~2.27.0", features = ["yaml"]}
 chrono = "0.4"
 csv = "1"
+dtparse = "1.0.3"
 rust_decimal = "1.0.1"
 
 [dev-dependencies]
