--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "csvpivot"
 version = "0.1.0"
 authors = ["Max Lee <maxbmhlee@gmail.com>"]
 edition = "2018"
-license = "MIT"
+license = "Apache-2.0"
 
 
 [dependencies]
