--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "csvpivot"
+name = "clipivot"
 version = "0.1.0"
 authors = ["Max Lee <maxbmhlee@gmail.com>"]
 edition = "2018"
@@ -14,7 +14,7 @@ lto = "thin"
 [badges]
 
 maintenance = { status = "passively-maintained" }
-travis-ci = { repository = "maxblee/csvpivot" }
+travis-ci = { repository = "maxblee/clipivot" }
 
 
 [dependencies]
