--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@
 language: rust
 env:
   global:
-  - PROJECT_NAME=csvpivot
+  - PROJECT_NAME=clipivot
 matrix:
   include:
   # Linux
@@ -41,7 +41,7 @@ deploy:
   skip_cleanup: true
   on:
     condition: $TRAVIS_RUST_VERSION = stable
-    repo: maxblee/csvpivot
+    repo: maxblee/clipivot
     tags: true
 
 cache: cargo
