--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "clipivot"
+description = "A command-line tool for quickly generating pivot tables."
 version = "0.1.0"
 authors = ["Max Lee <maxbmhlee@gmail.com>"]
 edition = "2018"
