--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "clipivot"
 description = "A command-line tool for quickly generating pivot tables."
-version = "0.1.1"
+version = "0.2.0"
 authors = ["Max Lee <maxbmhlee@gmail.com>"]
 edition = "2018"
 license = "Apache-2.0"
@@ -23,6 +23,7 @@ clap = { version = "~2.27.0", features = ["yaml"] }
 chrono = "0.4"
 csv = "1"
 csv_cli_core = { git = "https://github.com/maxblee/csv_cli_core", tag = "v0.1.0" }
+indexmap = "1.3.0"
 dtparse = "1.0.3"
 rust_decimal = "1.0.1"
 
