--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,13 +4,10 @@ description = "A command-line tool for quickly generating pivot tables."
 version = "0.2.0"
 authors = ["Max Lee <maxbmhlee@gmail.com>"]
 edition = "2018"
-license = "Apache-2.0"
+license = "MIT OR Apache-2.0"
 categories = ["command-line-utilities"]
 keywords = ["csv", "tsv", "cli"]
 readme = "README.md"
-
-[profile.release]
-lto = "thin"
 
 [badges]
 
@@ -19,16 +16,17 @@ travis-ci = { repository = "maxblee/clipivot" }
 
 
 [dependencies]
-clap = { version = "~2.27.0", features = ["yaml"] }
-chrono = "0.4"
-csv = "1"
+clap = "~2.27.0"
+chrono = "0.4.11"
+csv = "1.1.3"
 csv_cli_core = { git = "https://github.com/maxblee/csv_cli_core", tag = "v0.1.0" }
-indexmap = "1.3.0"
-dtparse = "1.0.3"
-rust_decimal = "1.0.1"
+indexmap = "1.3.2"
+once_cell = "1.3.1"
+rust_decimal = "1.4.0"
 
 [dev-dependencies]
 approx = "0.3.2"
+assert_cmd = "1.0.1"
 cli_testing_utils = { git = "https://github.com/maxblee/cli_testing_utils", tag = "v0.1.0" }
-proptest = "0.9.4"
+proptest = "0.9.5"
 rand = "0.6"
