--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,10 +16,10 @@ travis-ci = { repository = "maxblee/clipivot" }
 
 
 [dependencies]
-clap = "~2.27.0"
+clap = "2.27.0"
 chrono = "0.4.11"
 csv = "1.1.3"
-csv_cli_core = { git = "https://github.com/maxblee/csv_cli_core", tag = "v0.1.0" }
+csv_cli_core = { git = "https://github.com/maxblee/csv_cli_core", tag = "v0.1.0", version = "0.1.0" }
 indexmap = "1.3.2"
 once_cell = "1.3.1"
 rust_decimal = "1.4.0"
@@ -27,6 +27,6 @@ rust_decimal = "1.4.0"
 [dev-dependencies]
 approx = "0.3.2"
 assert_cmd = "1.0.1"
-cli_testing_utils = { git = "https://github.com/maxblee/cli_testing_utils", tag = "v0.1.0" }
+cli_testing_utils = { git = "https://github.com/maxblee/cli_testing_utils", tag = "v0.1.0", version = "0.1.0" }
 proptest = "0.9.5"
 rand = "0.6"
