--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ name: Create Release
 env:
   # Could, potentially automatically parse
   # the bin name, but let's do it automatically for now.
-  RELEASE_BIN: gh-actions-template
+  RELEASE_BIN: clipivot
 
   # Space separated paths to include in the archive.
   # Start relative paths with a dot if you don't want
