--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -89,6 +89,8 @@ jobs:
     - uses: actions/create-release@v1
       name: Create Release
       id: create_release
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name: ${{ github.ref }}
         release_name: Release ${{ github.ref }}
@@ -97,6 +99,8 @@ jobs:
     - uses: actions/upload-release-asset@v1
       name: Upload Release for Linux
       if: matrix.os == 'ubuntu-latest'
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ./artifacts/${{ env.RELEASE_BIN }}-linux-x86_64.tar.gz
@@ -106,6 +110,8 @@ jobs:
     - uses: actions/upload-release-asset@v1
       name: Upload Release for MacOS
       if: matrix.os == 'macos-latest'
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ./artifacts/${{ env.RELEASE_BIN }}-mac-x86_64.zip
@@ -115,6 +121,8 @@ jobs:
     - uses: actions/upload-release-asset@v1
       name: Upload Release for Windows
       if: matrix.os == 'windows-latest'
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ./artifacts/${{ env.RELEASE_BIN }}-windows-x86_64.zip
