--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ clap = "2.27.0"
 chrono = "0.4.11"
 csv = "1.1.3"
 indexmap = "1.3.2"
-once_cell = "1.3.1"
+lazy_static = "1.4.0"
 rust_decimal = "1.4.0"
 
 [dev-dependencies]
