--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,15 @@
 [package]
 name = "clipivot"
 description = "A command-line tool for quickly generating pivot tables."
-version = "0.3.4"
+version = "0.3.5"
 authors = ["Max Lee <maxbmhlee@gmail.com>"]
 edition = "2018"
 license = "MIT OR Apache-2.0"
 categories = ["command-line-utilities"]
 keywords = ["csv", "tsv", "cli"]
+documentation = "https://docs.rs/clipivot/latest/clipivot/"
+repository = "https://github.com/maxblee/clipivot"
+homepage = "https://github.com/maxblee/clipivot"
 readme = "README.md"
 
 [badges]
